AIR-2984 Fixed a security issue with PIL < 6.2.2 and removed redundant files
Signed-off-by: Pavel Macenauer <pavel.macenauer@nxp.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ python/pyarmnn/src/pyarmnn/_generated/
 python/pyarmnn/pyarmnn_docs-*
 python/pyarmnn/cmake_install.cmake
 python/pyarmnn/CMakeCache.txt
-python/pyarmnn/test/testdata/*
+python/pyarmnn/test/testdata/
+env/
